force-app/main/default/objects/NCMT_TCO_LCC__c/NCMT_TCO_LCC__c.object-meta.xml
<CustomObject>
    <label>NCMT TCO LCC</label>
    <nameField>
        <displayFormat>LCC-{000000}</displayFormat>
        <label>NCMT TCO LCC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT TCO LCCs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>