force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Bldg_Mgmt_Escalated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Bldg_Mgmt_Escalated_Cost__c</fullName>
    <formula>Bldg_Mgmt_Cost__c  * 
((1 +  TCO_Lifecycle_Input__r.TCO_Project_Cost_Rate__r.Facilities_Mgmt_Esc_Rate__c )^ 
(Year__c-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bldg Mgmt Escalated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>