force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Bldg_Shell_Clean_Esc_Discounted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Bldg_Shell_Clean_Esc_Discounted_Cost__c</fullName>
    <formula>( Bldg_Shell_Clean_Escalated_Cost__c  * 
((1 - TCO_Lifecycle_Input__r.Nominal_Discount_Rate_Cost_of_Capital__c )^ 
(Year__c-1))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bldg Shell_Clean Esc &amp; Discounted Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>