force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Construction_Cost__c.field-meta.xml
<CustomField>
    <fullName>Construction_Cost__c</fullName>
    <formula>If( TCO_Lifecycle_Input__r.Construction_Use_Cost__c, (TCO_Lifecycle_Input__r.Construction_Monthly_Cost__c * Months_Construction__c), 0) +  If(  TCO_Lifecycle_Input__r.Planning_and_Pre_design_Use_Cost__c , Pre_design_Cost__c, 0) + If( TCO_Lifecycle_Input__r.Design_Use_Cost__c,  Design_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>