force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Construction_Escalated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Construction_Escalated_Cost__c</fullName>
    <formula>Construction_Cost__c * 
((1 + TCO_Lifecycle_Input__r.NCMT_Project__r.Total_Escalation__c )^ 
(Year__c-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Escalated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>