force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Design_Cost__c.field-meta.xml
<CustomField>
    <fullName>Design_Cost__c</fullName>
    <formula>(TCO_Lifecycle_Input__r.Design_Monthly_Cost__c * Months_Design__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>