force-app/main/default/objects/NCMT_TCO_LCC__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>Date( Year(Start_Date__c) + 1, Month(Start_Date__c), Day(Start_Date__c)) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>