force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Janitorial_Escalated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Janitorial_Escalated_Cost__c</fullName>
    <formula>Janitorial_Cost__c  *
((1 +  TCO_Lifecycle_Input__r.TCO_Project_Cost_Rate__r.Janitorial_Esc_Rate__c )^
 (Year__c-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Janitorial Escalated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>