force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Months_Commissioning_Move_in__c.field-meta.xml
<CustomField>
    <fullName>Months_Commissioning_Move_in__c</fullName>
    <label>Months Commissioning/Move-in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>