force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Months_Construction__c.field-meta.xml
<CustomField>
    <fullName>Months_Construction__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Months Construction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>