force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Months_Operational__c.field-meta.xml
<CustomField>
    <fullName>Months_Operational__c</fullName>
    <label>Months Operational</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>