force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Months_Pre_Design__c.field-meta.xml
<CustomField>
    <fullName>Months_Pre_Design__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Months Pre-Design</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>