force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Moving_Cost__c.field-meta.xml
<CustomField>
    <fullName>Moving_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Moving Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>