force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Moving_Escalated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Moving_Escalated_Cost__c</fullName>
    <formula>Moving_Cost__c * 
((1 + TCO_Lifecycle_Input__r.TCO_Project_Cost_Rate__r.General_Construction_Esc_Rate__c )^ 
(Year__c-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moving Escalated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>