force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Moving_Escalated_Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Moving_Escalated_Discounted_Price__c</fullName>
    <formula>( Moving_Escalated_Cost__c * 
((1 - TCO_Lifecycle_Input__r.Nominal_Discount_Rate_Cost_of_Capital__c )^ 
(Year__c-1)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moving Escalated &amp; Discounted Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>