force-app/main/default/objects/NCMT_TCO_LCC__c/fields/NCMT_Project__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project__c</fullName>
    <label>NCMT Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>NCMT TCO LCCs</relationshipLabel>
    <relationshipName>NCMT_TCO_LCCs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>