force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Operations_Maint_Esc_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Operations_Maint_Esc_Discounted__c</fullName>
    <formula>Janitorial_Escalated_Discounted_Cost__c  +  Landscaping_Escalated_Discounted_Cost__c  +  Routine_Maint_Esc_Discounted_Cost__c  +  Bldg_Supp_Escalated_Discounted_Cost__c  +  Minor_Repair_Escalated_Discounted_Cost__c  +  Bldg_Shell_Clean_Esc_Discounted_Cost__c  +  Bldg_Mgmt_Escalated_Discounted_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operations &amp; Maint. Esc. &amp; Discounted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>