force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Operations_Maintenance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Operations_Maintenance_Cost__c</fullName>
    <formula>Janitorial_Cost__c + Landscaping_Cost__c + Routine_Maint_Cost__c + Bldg_Supp_Cost__c + Minor_Repair_Cost__c + Bldg_Shell_Clean_Cost__c + Bldg_Mgmt_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operations &amp; Maintenance Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>