force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Operations_Maintenance_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Operations_Maintenance_Escalated__c</fullName>
    <formula>Janitorial_Escalated_Cost__c  +  Landscaping_Escalated_Cost__c  +  Routine_Maint_Escalated_Cost__c  +  Bldg_Supp_Escalated_Cost__c  +  Minor_Repair_Escalated_Cost__c  +  Bldg_Shell_Clean_Escalated_Cost__c  +  Bldg_Mgmt_Escalated_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operations &amp; Maintenance Escalated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>