force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Oth_Heating_Cost__c.field-meta.xml
<CustomField>
    <fullName>Oth_Heating_Cost__c</fullName>
    <formula>(TCO_Lifecycle_Input__r.NCMT_TCO_Annual_Cost_Summary__r.Ann_Oth_Heating_Cost__c/ 12) * Months_Operational__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oth Heating Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>