force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Oth_Heating_Escalated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Oth_Heating_Escalated_Cost__c</fullName>
    <formula>Oth_Heating_Cost__c  * 
((1 + TCO_Lifecycle_Input__r.TCO_Project_Cost_Rate__r.Other_Heat_Esc_Rate__c )^ 
(Year__c-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oth Heating Escalated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>