force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Other_Cooling_Escalated_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Other_Cooling_Escalated_Discounted__c</fullName>
    <formula>( Other_Cooling_Escalated_Cost__c * 
((1 - TCO_Lifecycle_Input__r.Nominal_Discount_Rate_Cost_of_Capital__c )^ 
(Year__c-1))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Cooling Escalated &amp; Discounted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>