force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Pre_design_Cost__c.field-meta.xml
<CustomField>
    <fullName>Pre_design_Cost__c</fullName>
    <formula>(TCO_Lifecycle_Input__r.Pre_design_Monthly_Cost__c * Months_Pre_Design__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-design Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>