force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Previous_LCC__c.field-meta.xml
<CustomField>
    <fullName>Previous_LCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>System field to chain LCC records together.</inlineHelpText>
    <label>Previous LCC</label>
    <referenceTo>NCMT_TCO_LCC__c</referenceTo>
    <relationshipLabel>NCMT TCO LCCs</relationshipLabel>
    <relationshipName>NCMT_TCO_LCCs</relationshipName>
    <type>Lookup</type>
</CustomField>