force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Ptbl_Water_Escalated_Discounted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ptbl_Water_Escalated_Discounted_Cost__c</fullName>
    <formula>( Ptbl_Water_Escalated_Cost__c  * 
((1 - TCO_Lifecycle_Input__r.Nominal_Discount_Rate_Cost_of_Capital__c )^ 
(Year__c-1))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ptbl Water Escalated &amp; Discounted Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>