force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Reclaim_Water_Escalated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Reclaim_Water_Escalated_Cost__c</fullName>
    <formula>Reclaim_Water_Cost__c  * 
((1 + TCO_Lifecycle_Input__r.TCO_Project_Cost_Rate__r.Non_Portable_Water_Esc_Rate__c )^ 
(Year__c-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reclaim Water Escalated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>