force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Refresh_Escalated_Discount_Cost__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Escalated_Discount_Cost__c</fullName>
    <formula>(  Refresh_Escalated_Cost__c  * 
((1 - TCO_Lifecycle_Input__r.Nominal_Discount_Rate_Cost_of_Capital__c )^ 
(Year__c-1)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refresh Escalated &amp; Discount Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>