force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Refresh_Year__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh Year</label>
    <type>Checkbox</type>
</CustomField>