force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Repair_Cost__c.field-meta.xml
<CustomField>
    <fullName>Repair_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Repair Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>