force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Repair_Escalated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Repair_Escalated_Cost__c</fullName>
    <formula>Repair_Cost__c * 
((1 + TCO_Lifecycle_Input__r.TCO_Project_Cost_Rate__r.Project_Name__r.Total_Escalation__c )^ 
(Year__c-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Escalated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>