force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Cost__c</fullName>
    <label>Replacement Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>