force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Retrofit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Retrofit_Cost__c</fullName>
    <formula>if ( Retrofit_Year__c, TCO_Lifecycle_Input__r.NCMT_TCO_Annual_Cost_Summary__r.Total_TI_Renovate_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retrofit Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>