force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Retrofit_Year__c.field-meta.xml
<CustomField>
    <fullName>Retrofit_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retrofit Year</label>
    <type>Checkbox</type>
</CustomField>