force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Routine_Maint_Cost__c.field-meta.xml
<CustomField>
    <fullName>Routine_Maint_Cost__c</fullName>
    <formula>(TCO_Lifecycle_Input__r.NCMT_TCO_Annual_Cost_Summary__r.Ann_Routine_Maint_Cost__c/ 12) * Months_Operational__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Routine Maint Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>